<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="passposs2.kr.hs.emirim.favoritephoto.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_title"
        android:textSize="20sp"
        />

    <CheckBox
        android:id="@+id/check_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_lbl"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_quest"
        android:textSize="20sp"
        android:visibility="invisible"
        />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"

        >
        <RadioButton
            android:id="@+id/radio_kotori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_kotori"
            />
        <RadioButton
            android:id="@+id/radio_niko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_nico"

            />
        <RadioButton
            android:id="@+id/radio_rin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_rin"
            />
        <RadioButton
            android:id="@+id/radio_umi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_umi"
            />
    </RadioGroup>

    <Button
        android:id="@+id/but_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bur_lbl"
        />

    <ImageView
        android:id="@+id/imgv_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/lovelivekotori"
        android:visibility="invisible"
        />




</LinearLayout>
